# ps-cka

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CKA-Course-02-Installing-Clusters-kubeadm-Outline.docx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  c02-m01-demo-runbook.md  c02-snapshots.ps1  c02-vagrant.ps1  diagram-cka-up-flow.html  diagram-hyperv-topology.html  diagram-vagrant-provisioner.html  installing-clusters-kubeadm-exercise-files.md  k8s-foundations-exercise-files.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: globo-shop-image.yml  mlc-config.json  validate.yml
cka-cert-buddy/: .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
cka-cert-buddy/.github/: copilot-instructions.md
cka-cert-buddy/references/: cka-command-guide.md  cka-exam-guide.md  cka-learning-resources.md  cka-objectives.md  fictional-companies.md  style-guide.md
dev/: README.md  m01-demo-runbook.md  m02-demo-runbook.md  m03-demo-runbook.md
m01-linux-host-prep/: c02-m01-demo-runbook.md
m02-kubeadm-init-join/: c02-m02-demo-runbook.md
m03-cni-cluster-validation/: c02-m03-demo-runbook.md
notebooks/: .gitignore  HOWTO.md  PRE-RECORD.md  README.md  c02-m01-linux-host-prep.ipynb  c02-m02-kubeadm-init-join.ipynb  c02-m03-cni-cluster-validation.ipynb  clear-outputs.ps1  launch.ps1  pyproject.toml
notebooks/assets/: recording.css
notebooks/tools/: runbook_to_ipynb.py  smoke-kernel.py
(+159 files in other folders)
